--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^4.2.1
   intl: ^0.18.1
   google_fonts: ^6.1.0
+  responsive_builder: ^0.7.0
 
 dev_dependencies:
   flutter_test:
